Update src/confirm_move.html : Delete useless attributes

--- a/src/confirm_move.html
+++ b/src/confirm_move.html
@@ -9,20 +9,13 @@
         <link rel='stylesheet' href='../assets/css/style.css' />
     </head>
     <body>
-
         <div class="center" style="width:90%">
-
-            <div class="ui content" id="confirm">
-
-            </div>
-
-
+            <div class="ui content" id="confirm"></div>
         </div>
-
     </body>
 
-    <script type="" src="../assets/js/jquery-3.6.0.min.js"></script>
-    <script type="" src="../assets/js/semantic.min.js"></script>
-    <script type="" src="confirm.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/semantic.min.js"></script>
+    <script src="confirm.js"></script>
 
 </html>
