Update index.html : Set ID for Git Init Button

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
 
             <!-- 여기를 추가한것입니다 134 to 147 -->
             <!-- git init button -->
-            <a class="item button git" title="Git init">
+            <a class="item button git" id="git_init" title="Git init">
                 <i class="icon bi-git middle"></i>
             </a>
 
