Update index.html : Show Name of Git Init Button

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,7 @@
             <!-- git init button -->
             <a class="item button git" id="git_init" title="Git init">
                 <i class="icon bi-git middle"></i>
+                Git Init
             </a>
 
             <!-- git menu different by git status -->
