Update src/index.html : Remove Git status icon menu

--- a/src/index.html
+++ b/src/index.html
@@ -138,13 +138,8 @@
                 Git Init
             </a>
 
-            <!-- git menu different by git status -->
-            <a class="item button menu" id="git_commit" title="Git menu">
-                <i class="icon bi-menu-button middle"></i>
-            </a>
-
             <!-- git commit button -->
-            <a class="item button show_hidden" title="Show hidden files and directories">
+            <a class="item button menu" id="git_commit" title="Git commit">
                 <i class="icon bi-box-arrow-in-down middle"></i>
             </a>
 
