Update src/index.html : Add innertext in Git commit button

--- a/src/index.html
+++ b/src/index.html
@@ -141,6 +141,7 @@
             <!-- git commit button -->
             <a class="item button menu" id="git_commit" title="Git commit">
                 <i class="icon bi-box-arrow-in-down middle"></i>
+                Git Commit
             </a>
 
             <div class="flex hidden" id="hamburger_menu">
