--- a/src/git_rename_dialog.html
+++ b/src/git_rename_dialog.html
@@ -21,7 +21,7 @@
 
         <div>
             <input id="btn_git_rename_cancel" tabindex="2" class="ui small button default" type="button" value="Cancel">
-            <input id="btn_git_rename_confirm" tabindex="1" autofocus class="ui small button default red" type="button" value="Delete">
+            <input id="btn_git_rename_confirm" tabindex="1" autofocus class="ui small button default red" type="button" value="Rename">
         </div>
 
     </div>
