Implemented copy merge replace. Added template files

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="item"><a href="#" class="music"><i class="bi bi-image"></i> Music</a></div>
         <div class="item"><a href="#" class="pictures"><i class="bi bi-image"></i> Pictures</a></div>
         <div class="item"><a href="#" class="videos"><i class="bi bi-image"></i> Videos</a></div>
-        <div class="item"><a href="#" class="grid_view"><i class="bi bi-grid"></i> Grid</a></div>
-        <div class="item"><a href="#" class="list_view"><i class="bi bi-list"></i> List</a></div>
+        <div class="item"><a href="#" class="grid_view"><i class="bi bi-grid"></i> </a></div>
+        <div class="item"><a href="#" class="list_view"><i class="bi bi-list"></i> </a></div>
 
     </div>
     <div id="navigation_menu">
@@ -40,7 +40,9 @@
 
     <div class="container">
 
-        <div id="minibar" class="minibar">
+
+
+        <div id="minibar" class="">
 
             <div class="item" id="mb_home" title="Home (Ctrl+B)">
                 <i class="bi bi-house large"></i>
@@ -85,7 +87,7 @@
                 <div id="progress_msg"></div>
                 <progress id="progress_bar"></progress>
             </div>
-            <div id="msg" class="bottom hidden">ahhhhhhhhhh</div>
+            <div id="msg" class="bottom hidden"></div>
 
         </div>
 
