Update src/index.html : Add merge button UI in header

--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,12 @@
                 Git Commit
             </a>
 
+            <!-- git merge button -->
+            <a class="item button merge" id="git_merge" title="Git merge">
+                <i class="icon bi-sign-merge-right-fill middle"></i>
+                Git Merge
+            </a>
+
             <div class="flex hidden" id="hamburger_menu">
 
                 <div class="col">
