Update src/git_merge_dialog_fail.html : Change cancel input's id

--- a/src/git_merge_dialog_fail.html
+++ b/src/git_merge_dialog_fail.html
@@ -15,7 +15,7 @@
         <i class="icon warning circle"></i> Merge Fail:
     </div>
     <div>
-        <input id="btn_git_merge_cancel" tabindex="2" class="ui small button default" type="button" value="Cancel">
+        <input id="btn_git_merge_fail_cancel" tabindex="2" class="ui small button default" type="button" value="Cancel">
     </div>
 
 </div>
