--- a/src/git_merge_dialog_success.html
+++ b/src/git_merge_dialog_success.html
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-        <input id="btn_git_merge_cancel" tabindex="2" class="ui small button default" type="button" value="Cancel">
+        <input id="btn_git_merge_success_cancel" tabindex="2" class="ui small button default" type="button" value="Cancel">
     </div>
 
 </div>
