Update index.html : Set ID for Git History Button

--- a/src/index.html
+++ b/src/index.html
@@ -150,6 +150,11 @@
                 Git Merge
             </a>
 
+            <a class="item button history" id="git_history" title="Git history">
+                <i class="icon bi-box-arrow-in-down middle"></i>
+                Git History
+            </a>
+
             <div class="flex hidden" id="hamburger_menu">
 
                 <div class="col">
