Update index.html : changed icon

--- a/src/index.html
+++ b/src/index.html
@@ -150,8 +150,9 @@
                 Git Merge
             </a>
 
+            <!-- git history button -->
             <a class="item button history" id="git_history" title="Git history">
-                <i class="icon bi-box-arrow-in-down middle"></i>
+                <i class="bi bi-clock-history"></i>
                 Git History
             </a>
 
