Upadte git_history.html : add CSS

--- a/src/git_history.html
+++ b/src/git_history.html
@@ -7,10 +7,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="../assets/css/semantic.min.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <style>
+        p {
+          line-height : 0%;
+          letter-spacing : 4px;
+          cursor : default;
+        }
+        span{
+            cursor: pointer;
+        }
+      </style>
 </head>
-<body>
+<body style = "overflow : auto !important">
 
-    <div id="git_history_storage" style="padding: 20px;overflow: auto;">
+    <div id="git_history_storage" style="padding: 20px;">
 
     </div>
 
