List files using gio cpp module

--- a/dialogs/confirmdelete.html
+++ b/dialogs/confirmdelete.html
@@ -26,7 +26,7 @@
 
             <div class="bottom footer">
                 <input id="cancel_delete_button" tabindex="2" class="button" type="button" value="Cancel">
-                <input id="delete_button" tabindex="1" autofocus class="button warning" type="button" value="Delete">
+                <input id="delete_button" tabindex="1" class="button warning" type="button" value="Delete">
             </div>
 
         </div>
