--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="item list_view"><a href="#" class=""><i class="bi bi-list"></i> </a></div>
         <div class="item show_hidden"><a href="#" class="" title="Show hidden Files"><i class="bi bi-eye"></i> </a></div>
         <div class="item right settings">
-            <input class="slider" type="range" id="icon_size_selector" value="1" min="0" max="4" step="0" title="Adjust icon size"></ipnut>
+            <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="16" title="Adjust icon size"></ipnut>
         </div>
     </div>
     <div id="navigation_menu">
