Implemented Cut. Added open_with to the libgio node module

--- a/index.html
+++ b/index.html
@@ -1,46 +1,94 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
-  <!-- <link rel="stylesheet" href="./node_modules/semantic-ui-icon/icon.min.css"> -->
-  <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/css/sidebar.css" />
-  <title></title>
-  <style>
-    #selection-rect {
-      position: absolute;
-      background-color: #c0c0c0;
-      opacity: 0.5;
-      display: none;
-      z-index: 9999;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="./node_modules/semantic-ui-icon/icon.min.css"> -->
+    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="./assets/css/sidebar.css" />
+    <title></title>
 </head>
 <body>
 
-    <div id="header_menu">
-        <div class="item"><a href="#" class="home"><i class="bi bi-house"></i> Home</a></div>
-        <div class="item"><a href="#" class="documents"><i class="bi bi-folder"></i> Documents</a></div>
-        <div class="item"><a href="#" class="downloads"><i class="bi bi-download"></i> Downloads</a></div>
-        <div class="item"><a href="#" class="music"><i class="bi bi-image"></i> Music</a></div>
-        <div class="item"><a href="#" class="pictures"><i class="bi bi-image"></i> Pictures</a></div>
-        <div class="item"><a href="#" class="videos"><i class="bi bi-image"></i> Videos</a></div>
-        <div class="item grid_view"><a href="#" class=""><i class="bi bi-grid"></i> </a></div>
-        <div class="item list_view"><a href="#" class=""><i class="bi bi-list"></i> </a></div>
-        <div class="item show_hidden"><a href="#" class="" title="Show hidden Files"><i class="bi bi-eye"></i> </a></div>
-        <div class="item right settings">
-            <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="16" title="Adjust icon size"></ipnut>
-        </div>
-    </div>
-    <div id="navigation_menu">
-        <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
-        <div class="item"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
-        <div class="input">
-            <input type="text" spellcheck="false" id="location" />
-        </div>
+    <div class="menus">
+        <div id="header_menu">
+            <div class="item"><a href="#" class="home"><i class="bi bi-house"></i> Home</a></div>
+            <div class="item"><a href="#" class="documents"><i class="bi bi-folder"></i> Documents</a></div>
+            <div class="item"><a href="#" class="downloads"><i class="bi bi-download"></i> Downloads</a></div>
+            <div class="item"><a href="#" class="music"><i class="bi bi-image"></i> Music</a></div>
+            <div class="item"><a href="#" class="pictures"><i class="bi bi-image"></i> Pictures</a></div>
+            <div class="item"><a href="#" class="videos"><i class="bi bi-image"></i> Videos</a></div>
+            <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="bi bi-grid"></i> </a></div>
+            <div class="item list_view" title="List View"><a href="#" class=""><i class="bi bi-list-task"></i> </a></div>
+            <div class="item show_hidden" title="Show Hidden Files"><a href="#" class="" title="Show hidden Files"><i class="bi bi-eye"></i> </a></div>
+            <div class="item right settings">
+                <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="16" title="Adjust icon size"></ipnut>
+                <a class="item" id="btn_hamburger_menu">
+                    <i class="bi bi-list"></i>
+                </a>
+                <div class="flex hidden" id="hamburger_menu">
 
+                    <div class="col">
+                        <div class="header">View</div>
+                        <!-- LIST VIEW -->
+                        <a class="item list" id="btn_list_view" title="List view.">
+                            <i class="bi list small"></i> List
+                        </a>
+                        <!-- GRID VIEW -->
+                        <a class="item grid" id="btn_grid_view" title="Grid view">
+                            <i class="ui icon th small"></i> Grid
+                        </a>
+                        <!-- DISK SUMMARY VIEW -->
+                        <a class="item disk" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
+                            <i class="ui icon disk small"></i> Disk Summary
+                        </a>
+                        <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
+                            <i class="ui icon eye small"></i> Show hidden
+                        </a>
+                    </div>
+
+                    <div class="col">
+                        <div class="header">Sort</div>
+                        <a class="item date" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
+                            <i class="small icon sort amount down"></i> Date
+                        </a>
+                        <a class="item name" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
+                            <i class="icon sort alphabet down small"></i> Name
+                        </a>
+                        <a class="item size" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
+                            <i class="icon sort amount down small"></i> Size
+                        </a>
+                        <a class="item type" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
+                            <i class="icon sort file alternative outline down small"></i> Type
+                        </a>
+                    </div>
+
+                    <div class="col">
+                        <div class="header">Utilities</div>
+                        <a class="item terminal" id="terminal" title="Open a terminal in the current folder">
+                            <i class="icon bi-terminal small"></i> Open terminal
+                        </a>
+                        <a class="item button gnome_disks" title="Gnome Disks">
+                            <i class="icon bi-hdd small"></i> Gnome disks
+                        </a>
+                        <a class="item button toggle_theme" title="Toggle Theme">
+                            <i class="icon small"></i> Toggle Theme
+                        </a>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        <div id="navigation_menu">
+            <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
+            <div class="item"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
+            <div class="input">
+                <input type="text" spellcheck="false" id="location" />
+            </div>
+            <div id="disk_space" class="disk_space"></div>
+        </div>
     </div>
 
     <div class="container">
@@ -81,9 +129,9 @@
 
         <div id="draghandle" class="draghandle"></div>
 
-        <div id="main">
+        <div id="main" class="main">
 
-            <div id="folder_grid"></div>
+            <div id="folder_grid" class="folder_grid"></div>
             <div id="hidden_folder_grid" class="hidden"></div>
 
             <div id="file_grid"></div>
@@ -94,7 +142,7 @@
                 <progress id="progress_bar"></progress>
             </div>
             <div id="msg" class="bottom hidden"></div>
-            <div id="quicksearch" class="bottom right hidden">
+            <div id="quicksearch" class="bottom right hidden quicksearch">
                 <input type="text" id="txt_quicksearch" />
             </div>
 
