--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
 
         </div>
 
-        <div id="sidebar" class="sidebar sidebar-left">
-
-        </div>
+        <div id="sidebar" class="sidebar sidebar-left"></div>
+        <!-- <div class="scrollbar"></div> -->
 
         <div id="draghandle" class="draghandle"></div>
 
