Hooked up sorting

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 
     <div class="container">
 
-        <div id="loader"></div>
+        <div id="loader" class="ui centered loader"></div>
 
         <div id="minibar" class="">
 
             <div class="item" id="mb_home" title="Home (Ctrl+B)">
-                <i class="bi bi-house large"></i>
+                <i class="bi bi-house"></i>
             </div>
             <br>
             <div class="item" id="mb_workspace" title="Workspace">
@@ -123,7 +123,7 @@
 
         </div>
 
-        <div id="sidebar" class="sidebar sidebar-left"></div>
+        <div id="sidebar" class="sidebar"></div>
         <!-- <div class="scrollbar"></div> -->
 
         <div id="draghandle" class="draghandle"></div>
