--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
             <div class="item"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
             <div class="input">
-                <input type="text" spellcheck="false" id="location" />
+                <input type="text" spellcheck="false" id="location" class="location" />
             </div>
             <div id="disk_space" class="disk_space"></div>
         </div>
@@ -124,7 +124,9 @@
 
         </div>
 
+
         <div id="sidebar" class="sidebar"></div>
+
         <!-- <div class="scrollbar"></div> -->
 
         <div id="draghandle" class="draghandle"></div>
