--- a/src/git_history_status.html
+++ b/src/git_history_status.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="../assets/css/semantic.min.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
     <style>
-      </style>
+        div{
+            padding:10px;
+        }
+    </style>
 </head>
-<body>
-    <div id = "show_git_commit" style="padding: 20px;">
+<body style = "overflow : auto !important">
+    <div>
+        <div id = "show_git_commit">
+        </div>
+        <div align="right">
+            <input id="btn_git_history_close" class="ui small button default" type="button" value="Close">
+        </div>
     </div>
 </body>
 </html>
