Update index.html : Add Git Clone Button

--- a/src/index.html
+++ b/src/index.html
@@ -138,6 +138,12 @@
                 Git Init
             </a>
 
+            <!-- git clone button -->
+            <a class="item button git" id="git_clone" title="Git clone">
+                <i class="icon bi-file-earmark-arrow-down-fill middle"></i>
+                Git Clone
+            </a>
+
             <!-- git commit button -->
             <a class="item button menu" id="git_commit" title="Git commit">
                 <i class="icon bi-box-arrow-in-down middle"></i>
