Update git_clone_dialog.html : Add Select Button of Github Repository Status

--- a/src/git_clone_dialog.html
+++ b/src/git_clone_dialog.html
@@ -11,22 +11,28 @@
 <body>
 
     <div id="confirm_git_clone" style="padding: 20px">
+        
         <div style="padding: 10px;">
-			<label style="font-size: 15px"> Github Repository Address </label>
+            <input type="radio" name="repo_status" value="public_repository"> Public
+            <input type="radio" name="repo_status" value="private_repository"> Private
+        </div>
+
+        <div style="padding: 10px;">
+            <label style="font-size: 15px"> Github Repository Address </label>
             <input id="github_repository_address" type="text">
         </div>
 
-		<div class="ui h5 warning" style="padding: 30px 0px 0px 0px;">
+        <div class="ui h5 warning" style="padding: 30px 0px 0px 0px;">
             <i class="icon warning circle"></i> Additional Information for Private Repository :
         </div>
 
-		<div style="padding: 10px 20px;">
-			Github ID    
+        <div style="padding: 10px 20px;">
+            Github ID    
             <input id="github_id" type="text">
         </div>
 
-		<div style="padding: 10px 20px;">
-			Access Token
+        <div style="padding: 10px 20px;">
+            Access Token
             <input id="github_access_token" type="text">
         </div>
 
