Update git_clone_dialog.html : Rename id of Buttons

--- a/src/git_clone_dialog.html
+++ b/src/git_clone_dialog.html
@@ -13,13 +13,13 @@
     <div id="confirm_git_clone" style="padding: 20px">
         
         <div style="padding: 10px;">
-            <input type="radio" name="repo_status" value="public_repository"> Public
-            <input type="radio" name="repo_status" value="private_repository"> Private
+            <input type="radio" name="visibility" value="public_repository"> Public &nbsp;
+            <input type="radio" name="visibility" value="private_repository"> Private
         </div>
 
         <div style="padding: 10px;">
             <label style="font-size: 15px"> Github Repository Address </label>
-            <input id="github_repository_address" type="text">
+            <input id="github_repo_address" type="text">
         </div>
 
         <div class="ui h5 warning" style="padding: 30px 0px 0px 0px;">
