--- a/src/git_clone_dialog.html
+++ b/src/git_clone_dialog.html
@@ -10,30 +10,27 @@
 </head>
 <body>
 
-    <div id="confirm_git_clone" style="padding: 20px">
-        
-        <div style="padding: 10px;">
-            <input type="radio" name="visibility" value="public_repository"> Public &nbsp;
-            <input type="radio" name="visibility" value="private_repository"> Private
-        </div>
+    <div style="padding: 20px">
 
         <div style="padding: 10px;">
             <label style="font-size: 15px"> Github Repository Address </label>
             <input id="github_repo_address" type="text">
         </div>
 
-        <div class="ui h5 warning" style="padding: 30px 0px 0px 0px;">
-            <i class="icon warning circle"></i> Additional Information for Private Repository :
-        </div>
+        <div id="github_information">
+            <div class="ui h5 warning" style="padding: 30px 0px 0px 0px;">
+                <i class="icon warning circle"></i> Additional Information for Private Repository :
+            </div>
 
-        <div style="padding: 10px 20px;">
-            Github ID    
-            <input id="github_id" type="text">
-        </div>
+            <div style="padding: 10px 20px;">
+                Github ID    
+                <input id="github_id" type="text">
+            </div>
 
-        <div style="padding: 10px 20px;">
-            Access Token
-            <input id="github_access_token" type="text">
+            <div style="padding: 10px 20px;">
+                Access Token
+                <input id="github_access_token" type="text">
+            </div>
         </div>
 
         <div style="padding: 20px 10px;">
