Update git_history.html : Improved History Item Font Size

--- a/src/git_history.html
+++ b/src/git_history.html
@@ -15,7 +15,8 @@
         }
         span{
             cursor: pointer;
-            letter-spacing : 0px;
+            line-height: 1;
+            font-size: 15px;
         }
         div{
           padding:10px;
