Update index.html : Added P Tag for Current Branch Text on Toolbar

--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,10 @@
                 Git Merge
             </a>
 
+            <p class="item button branch_info" id="git_branch_info">
+                
+            </p>
+
             <div class="flex hidden" id="hamburger_menu">
 
                 <div class="col">
