Update index.html : Applied Bottom Padding for Big List on Screen

--- a/src/index.html
+++ b/src/index.html
@@ -366,7 +366,7 @@
         <div class="view" id="info_view"></div>
 
         <!-- List view -->
-        <div class="view" id="list_view" style="margin-top: 5px"></div>
+        <div class="view" id="list_view" style="margin-top: 5px; padding-bottom: 100px;"></div>
 
         <!-- Icon view -->
         <div class="view " id="grid_view" style="margin-top: 10px">
